--- a/src/main/resources/assets/delynxos_wt_mod/lang/en_us.json
+++ b/src/main/resources/assets/delynxos_wt_mod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.delynxos_wt_mod.border_trigger": "Border Trigger"
+  "item.delynxos_wt_mod.border_trigger": "Border Trigger",
+  "item.delynxos_wt_mod.kogetsu": "Kogetsu"
 }
